--- a/src/1small/miniCard.css
+++ b/src/1small/miniCard.css
@@ -10,12 +10,12 @@
     border-color: #7749f8;
     width: fit-content;
     padding: 2%;
-    margin-top: 85px;
     margin-left: -0.2rem;
     float: left;
-    position: absolute;
-    bottom: 5%;
+    position: relative;
     background: white;
+    bottom: -3px;
+
 }
 
 .miniCRight {
@@ -29,10 +29,9 @@
     border-color: #7749f8;
     width: fit-content;
     padding: 2%;
-    margin-top: 85px;
-    margin-rignt: -0.2rem;  
-    position: absolute;
-    right: 9.5%;
-    bottom: 5%;
+    margin-right: -0.2rem;
+    float: right;
+    position: relative;
     background: white;
+    bottom: -3px;
 }
