--- a/src/1medium/pinkInfo.css
+++ b/src/1medium/pinkInfo.css
@@ -10,7 +10,7 @@
     text-align: center;
     font-family:'Courier New', Courier, monospace;
     font-weight: 900;
-    font-size:x-large;
+    font-size: 30px;
     margin: 5%;
 }
 
