--- a/src/1big/questions.css
+++ b/src/1big/questions.css
@@ -9,9 +9,14 @@
     border: solid 1px #ccc;
     display: inline-block;
    }
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(Auto-fit, minmax(20vw, 3fr));
-  grid-gap: 1em;
-  }
 
+
+  @media (min-width:1200px) {
+    .grid-container {
+      padding-left: 5vw;
+      display: grid;
+      grid-template-columns:  30% 30% 27%;
+      grid-gap: 3em;
+      grid-auto-flow: column;
+      }
+  }
