--- a/src/1medium/pinkInfo.css
+++ b/src/1medium/pinkInfo.css
@@ -10,12 +10,12 @@
     text-align: center;
     font-family:'Courier New', Courier, monospace;
     font-weight: 900;
-    font-size: 30px;
+    font-size:x-large;
     margin: 5%;
 }
 
-.h1 {
-    font-size: 150px;
-    font-weight: 900;
-}
 
+.h1 {
+    font-size: 300px;
+    font-weight: bolder;
+}
