--- a/src/1small/miniCard.css
+++ b/src/1small/miniCard.css
@@ -1,37 +1,88 @@
 
-.miniCLeft {
-    text-align: center;
-    font-family:'Courier New', Courier, monospace;
-    font-weight: 900;
-    font-size:x-large;
-    border-style: solid;
-    border-width: 4px;
-    border-radius: 15px;
-    border-color: #7749f8;
-    width: fit-content;
-    padding: 2%;
-    margin-left: -0.2rem;
-    float: left;
-    position: relative;
-    background: white;
-    bottom: -3px;
+@media (min-width:700px) {
 
-}
+    .miniCLeft {
+        text-align: center;
+        font-family:'Courier New', Courier, monospace;
+        font-weight: 900;
+        font-size:x-large;
+        border-style: solid;
+        border-width: 4px;
+        border-radius: 15px;
+        border-color: #7749f8;
+        width: fit-content;
+        padding: 1%;
+        margin-left: -0.2rem;
+        float: left;
+        position: relative;
+        background: white;
+        bottom: -3px;
+        font-size:x-large !important;
+    
+    
+    }
+    
+    .miniCRight {
+        text-align: center;
+        font-family:'Courier New', Courier, monospace;
+        font-weight: 900;
+        font-size:x-large;
+        border-style: solid;
+        border-width: 4px;
+        border-radius: 15px;
+        border-color: #7749f8;
+        width: fit-content;
+        padding: 1%;
+        margin-right: -0.2rem;
+        float: right;
+        position: relative;
+        background: white;
+        bottom: -3px;
+        font-size:x-large !important;
+    }
+  }
 
-.miniCRight {
-    text-align: center;
-    font-family:'Courier New', Courier, monospace;
-    font-weight: 900;
-    font-size:x-large;
-    border-style: solid;
-    border-width: 4px;
-    border-radius: 15px;
-    border-color: #7749f8;
-    width: fit-content;
-    padding: 2%;
-    margin-right: -0.2rem;
-    float: right;
-    position: relative;
-    background: white;
-    bottom: -3px;
-}
+
+
+  @media (max-width:699px) {
+
+    .miniCLeft {
+        text-align: center;
+        font-family:'Courier New', Courier, monospace;
+        font-weight: 900;
+        font-size:x-large;
+        border-style: solid;
+        border-width: 4px;
+        border-radius: 15px;
+        border-color: #7749f8;
+        width: fit-content;
+        padding: 1%;
+        margin-left: -0.2rem;
+        float: left;
+        position: relative;
+        background: white;
+        bottom: -3px;
+        font-size:medium !important;
+    
+    
+    }
+    
+    .miniCRight {
+        text-align: center;
+        font-family:'Courier New', Courier, monospace;
+        font-weight: 900;
+        font-size:x-large;
+        border-style: solid;
+        border-width: 4px;
+        border-radius: 15px;
+        border-color: #7749f8;
+        width: fit-content;
+        padding: 1%;
+        margin-right: -0.2rem;
+        float: right;
+        position: relative;
+        background: white;
+        bottom: -3px;
+        font-size:medium !important;
+    }
+  }
