--- a/src/1small/purpleButton.css
+++ b/src/1small/purpleButton.css
@@ -1,5 +1,15 @@
-.purpleButt {
-    color: cornflowerblue;
-    background: crimson;
-    align-self: center;
+.custom-btn {
+    margin-bottom: 1vw;
+    border-radius: 10px !important;
+    font-family:'sans-serif';
+    background-color: #7749f8 !important;
+    border: #fff !important;
+    color: rgb(248, 229, 253) !important; 
+}
+
+.custom-btn:hover {
+    border-bottom-right-radius: 17px !important;
+    color: #7749f8 !important;
+    background-color: #C7E7C7 !important;
+    border-color: #285e8e !important;
 }
