--- a/src/1medium/pinkInfo.css
+++ b/src/1medium/pinkInfo.css
@@ -11,7 +11,7 @@
     font-family:'Courier New', Courier, monospace;
     font-weight: 900;
     font-size:x-large;
-    margin: 5%;
+    margin: 2% 2% 2% 2%;
 }
 
 
